--- a/image_recognition.ipynb
+++ b/image_recognition.ipynb
@@ -142,7 +142,7 @@
     "model=keras.Sequential([\n",
     "    keras.layers.Dense(100,input_shape=(784,),activation='relu'),\n",
     "    keras.layers.Dense(50,input_shape=(784,),activation=LeakyReLU(alpha=0.1)),\n",
-    "    #keras.layers.Dense(20,input_shape=(784,),activation='relu'),\n",
+    "    keras.layers.Dense(20,input_shape=(784,),activation='LeakyReLU'),\n",
     "    keras.layers.Dense(10,activation='sigmoid')\n",
     "])\n",
     "model.compile(\n",
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "model.fit(x_train_flatten,y_train,epochs=5)"
+    "model.fit(x_train_flatten,y_train,epochs=20)"
    ]
   },
   {
