--- a/image_recognition.ipynb
+++ b/image_recognition.ipynb
@@ -162,16 +162,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.6570 - accuracy: 0.8200\n",
-      "Epoch 2/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2999 - accuracy: 0.9138\n",
-      "Epoch 3/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2456 - accuracy: 0.9288\n",
-      "Epoch 4/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2088 - accuracy: 0.9402\n",
-      "Epoch 5/5\n",
-      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1817 - accuracy: 0.9479\n"
+      "Epoch 1/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.1335 - accuracy: 0.9606",
+"Epoch 2/20",
+"1875/1875 [==============================] - 4s 2ms/step - loss: 0.1193 - accuracy: 0.9653",
+"Epoch 3/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.1082 - accuracy: 0.9677",
+"Epoch 4/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0986 - accuracy: 0.9706",
+"Epoch 5/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0907 - accuracy: 0.9729",
+"Epoch 6/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0829 - accuracy: 0.9762",
+"Epoch 7/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0760 - accuracy: 0.9780",
+"Epoch 8/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0705 - accuracy: 0.9796",
+"Epoch 9/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0651 - accuracy: 0.9803",
+"Epoch 10/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0603 - accuracy: 0.9820",
+"Epoch 11/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0561 - accuracy: 0.9839",
+"Epoch 12/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0525 - accuracy: 0.9848",
+"Epoch 13/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0485 - accuracy: 0.9862",
+"Epoch 14/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0447 - accuracy: 0.9876",
+"Epoch 15/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0424 - accuracy: 0.9883",
+"Epoch 16/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0383 - accuracy: 0.9898",
+"Epoch 17/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0360 - accuracy: 0.9897",
+"Epoch 18/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0333 - accuracy: 0.9908",
+"Epoch 19/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0313 - accuracy: 0.9913",
+"Epoch 20/20",
+"1875/1875 [==============================] - 3s 2ms/step - loss: 0.0290 - accuracy: 0.9922"
      ]
     },
     {
